--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,5 @@ DB_HOST=localhost
 
 JWT_SECRET=your_jwt_access_secret
 JWT_REFRESH_SECRET=your_jwt_refresh_secret
-ACCESS_TOKEN_EXPIRY=15m
+ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_EXPIRY=7d
